# boed

./: Cargo.toml  README.md
docs/: conversation_export.md  current_status.md  interface_design.md
examples/: interactive_mapping.rs  real_data_cars.rs
src/: config.rs  continuous.rs  error.rs  estimator.rs  lib.rs  model.rs  optimization.rs  runtime.rs  sequential.rs  utility.rs
tests/: boed_smoke.rs  validation_suite.rs
