[package]
name = "boed"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A Rust crate for Bayesian Optimal Experimental Design"
repository = ""
keywords = ["bayesian", "optimal-design", "experimental-design", "statistics", "science"]
categories = ["science", "mathematics"]

[lib]
name = "boed"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
